--- a/.gitignore
+++ b/.gitignore
@@ -36,14 +36,7 @@ captures/
 
 # IntelliJ
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
-.idea/modules.xml
-.idea/misc.xml
-.idea/vcs.xml
+.idea/
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
