--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -11,12 +11,13 @@
         android:theme="@style/AppMaterialTheme">
         <activity
             android:name=".HomeActivity"
-            android:label="Home" >
+            android:label="Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".BodyActivity" android:parentActivityName=".HomeActivity"></activity>
     </application>
 
 </manifest>
