--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:gridlayout-v7:26.1.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
