--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:gridlayout-v7:26.1.0'
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.android.gms:play-services-places:12.0.1'
 }
