--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -16,12 +16,14 @@
             android:label="Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".BodyActivity"
+            android:parentActivityName=".HomeActivity" />
+        <activity
+            android:name=".MyGymActivity"
             android:parentActivityName=".HomeActivity" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -29,8 +31,6 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
-        <activity android:name=".MyGymActivity"></activity>
     </application>
 
 </manifest>
